@@ -443,5 +443,15 @@ such as a USB stick.
 See <xref linkend="loading-firmware"/> for detailed information on how to
 load firmware files or packages during the installation.
 
+</para><para>
+
+If the &d-i; prompts for a firmware file and you do not have this firmware
+file available or do not want to install a non-free firmware file on your
+system, you can try to proceed without loading the firmware.  There are
+several cases where a driver prompts for additional firmware because it may
+be needed under certain circumstances, but the device does work without it
+on most systems (this e.g.  happens with certain network cards using the tg3
+driver).
+
 </para>
  </sect1>
