@@ -27,7 +27,10 @@ installation-guide (20120827) UNRELEASED; urgency=low
     section to bring it up to date for modern hardware.
   * Amended the "Official Debian GNU/Linux CD/DVD-ROM Sets" section
     (CD1 without network mirror too small for a full GNOME/KDE install).
- 
+  * Added a note that for some devices firmware may not be necessary,
+    even though a firmware prompt is displayed.
+    Closes: #687454 
+
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
 installation-guide (20120826) unstable; urgency=low
